--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,39 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,300);
 @import url(http://fonts.googleapis.com/css?family=Maven+Pro);
 
+@media (max-width: 992px) {
+	.newsletter {
+		padding-bottom: 70px !important;
+	}
+}
+
+@media (max-width: 768px) {
+	.glyphicon {
+		display: none;
+	}
+	.navbar-inverse .navbar-collapse{
+		background: #192A45;
+	}
+	.navbar-inverse .navbar-toggle,.navbar-inverse .navbar-toggle:hover{
+		border: #192A45 1px solid;
+		background: #476390 !important;
+	}
+}
+
+@media (max-width: 340px) {
+	.navbar-inverse .navbar-brand {
+		font-size: 26px !important;
+	}
+}
+
+
 body{
 	background: #eee;
 	font-family: 'Roboto', sans-serif;
+}
+.row {
+	margin-right: 0px;
+	margin-left: 0px;
 }
 .btn-black {
 	color: #fff;
@@ -18,11 +48,8 @@ body{
 .navbar {
 	padding-top: 10px;
 	height: 70px;
-	background: rgba(0,40,110,0.6);
-}
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover{
-	color: #fff;
-	background: none;
+	background: rgba(0,40,110,0.7);
+	border: none;
 }
 .navbar-inverse .navbar-brand{
 	font-family: 'Maven Pro', sans-serif;
@@ -31,24 +58,22 @@ body{
 }
 
 .navbar-inverse .navbar-nav>li>a{
-	font-weight: 300;
+	font-weight: 100;
 	font-size: 20px;
-	color:#b4b9b9;
-}
-
-.navbar-inverse .navbar-nav>li>a:hover{
 	color:#fff;
 }
 
-.slider{
+.navbar-inverse .navbar-nav>li>a:hover{
+	color:#b4b9b9;
+}
+
+#slider{
 	background: url("../img/background.jpg") center no-repeat;
 }
 
 .newsletter {
 	height: auto;
-	width: 600px;
 	background: rgba(0,0,0,0.6);
-	margin: 0 auto;
 	padding: 10px;
 }
 .newsletter .title{
@@ -63,47 +88,44 @@ body{
 	font-weight: 300;
 	margin-bottom: 5px;
 }
-.newsletter .form input{
+.newsletter input{
 	height: 50px;
-	width: 507px !important;
 	font-size: 20px;
 	font-weight: 300;
 }
-
-.newsletter .form button {
+.newsletter button {
 	height: 50px;
 	font-size: 20px;
 	font-weight: 300;
 	background: #fff;
-	z-index: auto !important;
+	vertical-align: top;
+	border-radius: 0;
 }
 
 .newsletter .form button:hover {
 	color: #476390;
 }
 
-.about{
-	margin-top: 50px;
-	padding: 20px 0;
+#about{
+	padding: 70px 0;
 }
 
-.about .container div{
+#about .container div{
 	text-align: center;
 }
-.about .container div .title{
+#about .container div .title{
 	margin: 10px 0;
 	text-align: center;
 }
-.about .container div .text{
+#about .container div .text{
 	text-align: justify;
 }
 
-.project {
-	margin-top: 50px;
-	padding: 20px 0;
+#project {
+	padding: 70px 0;
 	background: #476390;
 }
-.project h1 {
+#project h1 {
 	text-align: center;
 	font-size: 50px;
 	font-weight: 300;
@@ -111,16 +133,23 @@ body{
 	margin-bottom: 20px;
 	color: #fff;
 }
-.project p {
+#project p {
 	margin-top: 0px;
 	color: #fefefe;
 }
 
-.contact {
-	margin-top: 50px;
-	padding: 20px 0;
+#project p a{
+	color:#CAF4ED;
 }
-.contact h1 {
+
+#project p a:hover{
+	color:#CAF4ED;
+}
+
+#contact {
+	padding: 70px 0;
+}
+#contact h1 {
 	text-align: center;
 	font-size: 50px;
 	font-weight: 300;
@@ -128,16 +157,19 @@ body{
 	margin-bottom: 20px;
 	color: #000;
 }
-.contact p {
+#contact p {
 	margin-top: 0px;
 	color: #000;
 }
-.contact button {
+#contact .social {
+	margin-top: 30px;
+	text-align: center;
+}
+#contact button {
 	margin-top: 10px;
 }
 
 footer .row {
-	margin-top: 50px;
 	padding: 10px 0;
 	background: #476390;
 }
